SIM-35 ADD implementation, tests for all rules